<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="150dp"
        app:cardCornerRadius="15dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/food_plate"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/foodName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fname"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/price"
            android:textColor="#827717"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/addButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/add"
                tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/itemCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="20dp"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/itemCount"/>

            <ImageView
                android:id="@+id/subtractButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="17dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/subtract"
                tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>